--- a/resources/tomcat/newrelic/newrelic.yml
+++ b/resources/tomcat/newrelic/newrelic.yml
@@ -103,7 +103,7 @@ common: &default_settings
   # whether or not to capture HTTP params.  When true, frameworks can
   # exclude HTTP parameters from being captured.
   # Default is false.
-  capture_params: false
+  capture_params: true
 
   # Tells transaction tracer and error collector to not to collect
   # specific http request parameters. 
