--- a/resources/tomcat/newrelic/newrelic.yml
+++ b/resources/tomcat/newrelic/newrelic.yml
@@ -8,6 +8,9 @@
 # Do not add anything above this next line.
 common: &default_settings
 
+  attributes.enabled: true
+  attributes.include: request.parameters.*
+
   # ============================== LICENSE KEY ===============================
   # You must specify the license key associated with your New Relic
   # account.  This key binds your Agent's data to your account in the
