new relic master

--- a/resources/tomcat/newrelic/newrelic.yml
+++ b/resources/tomcat/newrelic/newrelic.yml
@@ -2,7 +2,7 @@
 # Java applications with deep visibility and low overhead.  For more details and additional
 # configuration options visit https://docs.newrelic.com/docs/java/java-agent-configuration.
 #
-# This configuration file is custom generated for Cisco WebEx Files
+# <%= generated_for_user %>
 #
 # This section is for settings common to all environments.
 # Do not add anything above this next line.
@@ -10,8 +10,10 @@ common: &default_settings
 
   # ============================== LICENSE KEY ===============================
   # You must specify the license key associated with your New Relic
+  # account. For example, if your license key is 12345 use this:
+  # license_key: '12345'
   # The key binds your Agent's data to your account in the New Relic service.
-  license_key: 'fc755f3350ad2603846fe6517c01769d6a63888a'
+  license_key: '<%= license_key %>'
 
   # Agent Enabled
   # Use this setting to disable the agent instead of removing it from the startup command.
@@ -21,13 +23,18 @@ common: &default_settings
   # Set the name of your application as you'd like it show up in New Relic.
   # If enable_auto_app_naming is false, the agent reports all data to this application.
   # Otherwise, the agent reports only background tasks (transactions for non-web applications)
-  # to this application. To report data to more than one application
+  # to this application. To report data to more than one application 
   # (useful for rollup reporting), separate the application names with ";".
   # For example, to report data to "My Application" and "My Application 2" use this:
   # app_name: My Application;My Application 2
-  # This setting is required.
+  # This setting is required. Up to 3 different application names can be specified.
   # The first application name must be unique.
-  app_name: <%= ENV["NEW_RELIC_APP_NAME"] %>
+  app_name: My Application
+
+  # To enable high security, set this property to true. When in high
+  # security mode, the agent will use SSL and obfuscated SQL. Additionally,
+  # request parameters and message parameters will not be sent to New Relic.
+  high_security: false
 
   # Set to true to enable support for auto app naming.
   # The name of each web app is detected automatically
@@ -57,12 +64,12 @@ common: &default_settings
 
   # The number of backup log files to save.
   # Default is 1.
-  log_file_count: 10
+  log_file_count: 1
 
   # The maximum number of kbytes to write to any one log file.
   # The log_file_count must be set greater than 1.
   # Default is 0 (no limit).
-  log_limit_in_kbytes: 10000
+  log_limit_in_kbytes: 0
 
   # Override other log rolling configuration and roll the logs daily.
   # Default is false.
@@ -95,27 +102,26 @@ common: &default_settings
   #proxy_user: username
   #proxy_password: password
 
-  # Limits the number of lines to capture for each stack trace.
+  # Limits the number of lines to capture for each stack trace. 
   # Default is 30
   max_stack_trace_lines: 30
 
   # Provides the ability to configure the attributes sent to New Relic. These
-  # attributes can be found in transaction traces, traced errors, Insight's
+  # attributes can be found in transaction traces, traced errors, Insight's 
   # transaction events, and Insight's page views.
   attributes:
-
+  
     # When true, attributes will be sent to New Relic. The default is true.
     enabled: true
-
-    #A comma separated list of attribute keys whose values should
+    
+    #A comma separated list of attribute keys whose values should 
     # be sent to New Relic.
-    include:
-      request.parameters.*
-
-    # A comma separated list of attribute keys whose values should
+    #include:
+    
+    # A comma separated list of attribute keys whose values should 
     # not be sent to New Relic.
     #exclude:
-
+    
 
   # Transaction tracer captures deep information about slow
   # transactions and sends this to the New Relic service once a
@@ -161,7 +167,7 @@ common: &default_settings
     # Default is true.
     explain_enabled: true
 
-    # Threshold for query execution time below which query plans will not
+    # Threshold for query execution time below which query plans will not 
     # not be captured.  Relevant only when `explain_enabled` is true.
     # Default is 0.5 seconds.
     explain_threshold: 0.5
@@ -194,7 +200,7 @@ common: &default_settings
     ignore_status_codes: 404
 
   # Transaction Events are used for Histograms and Percentiles. Unaggregated data is collected
-  # for each web transaction and sent to the server on harvest.
+  # for each web transaction and sent to the server on harvest. 
   transaction_events:
 
     # Set to false to disable transaction events.
@@ -227,7 +233,7 @@ common: &default_settings
   # New Relic Real User Monitoring gives you insight into the performance real users are
   # experiencing with your website. This is accomplished by measuring the time it takes for
   # your users' browsers to download and render your web pages by injecting a small amount
-  # of JavaScript code into the header and footer of each page.
+  # of JavaScript code into the header and footer of each page. 
   browser_monitoring:
 
     # By default the agent automatically inserts API calls in compiled JSPs to
@@ -238,7 +244,7 @@ common: &default_settings
     auto_instrument: true
 
   class_transformer:
-    # This instrumentation reports the name of the user principal returned from
+    # This instrumentation reports the name of the user principal returned from 
     # HttpServletRequest.getUserPrincipal() when servlets and filters are invoked.
     com.newrelic.instrumentation.servlet-user:
       enabled: false
